prevent overlap on introduction and profile

--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@
 /* Introduction */
 #introduction-img{
     padding: 10px;
+    height: 100%;
 }
 
 #introduction-img img{
@@ -69,6 +70,7 @@
     padding: 10px;
     background-color: #110C11;
     color: silver;
+    height: 100%;
 }
 
 /* Profile */
